--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -1,15 +1,17 @@
-.header {
+.header{
     width: 100%;
     height: 100px;
     background: #D8D8D8;
 }
 
+
 /* I would suggest using float to get this container in its desired location. */
 
 .content-left {
     width: 34%;
+    float:left;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    height: 600px;
     background: #565555;
 }
 
@@ -18,8 +20,9 @@
 
 .content-mid {
     width: 66%;
+    float: right;
     /* This height is a placeholder. You will need to make some adjustments to get this container to look like the design. */
-    height: 100px;
+    height: 600px;
     background: #B0B0B0;
 }
 
@@ -29,4 +32,6 @@
     width: 100%;
     height: 100px;
     background: #3A3A3A;
+    position:absolute;
+    bottom:0;
 }
