--- a/level-1/step-2/step-2.css
+++ b/level-1/step-2/step-2.css
@@ -1,13 +1,13 @@
 /* Step-2 You can assign padding to all sides of a container by using the padding property. */
 
 .content-left {
- 
+    padding:20px;
 }
 
 /* Step 2 You can assign padding to all sides of a container by using the padding property. */
 
 .header {
-  
+  padding:20px;
 }
 
 
@@ -15,18 +15,27 @@
 
 .profile-image-container {
     background: #96F0F2;
+    width:auto;
+    height:150px;
+    margin-bottom:0;
 }
 
 /* Step-2 One option to get the container to fill the parent container is to use width: auto; */
 
 .profile-links-container {
     background: #12F3F7;
+    width: auto;
+    height: 360px;
+    margin-top:25px;
 }
 
 /* Step-2 You can either use float left or position absolute to get this element to in the desired location. */
 
 .logo-container {
     background: #4F4949;
+    width:360px;
+    height:44px;
+    float:left;
 }
 
 
@@ -34,6 +43,9 @@
 
 .menu-container {
     background: #4F4949;
+    width:44px;
+    height:44px;
+    float:right;
 }
 
 
