--- a/level-1/step-3/step-3.css
+++ b/level-1/step-3/step-3.css
@@ -1,17 +1,24 @@
 /* Step-3 You can assign padding to all sides of a container by using the padding property. */
 
 .content-mid {
- 
+  padding:60px;
 }
 
 .content-mid-header {
   background: #444;
+  width:500px;
+  height:60px;
 }
 
 .content-container {
-
+  width:500px;
+  height:310px;
 }
 
 .content {
   background: #D8D8D8;
+  padding: 20px;
+  width:auto;
+  height:350px;
+  text-align:center;
 }
